feat(OCLT-23): add CSPRNG wrapper and type conversion functions

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,6 @@
 {
     "preset": "ts-jest",
-    "testEnvironment": "node",
+    "testEnvironment": "jest-environment-jsdom",
     "roots": ["<rootDir>/tests"],
     "testMatch": ["**/*.spec.ts"],
     "moduleNameMapper": {
