--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "eslint": "^8.57.0",
         "husky": "^9.0.11",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
         "ts-jest": "^29.1.2",
@@ -58,5 +59,9 @@
         "extends": [
             "@commitlint/config-conventional"
         ]
+    },
+    "dependencies": {
+        "@noble/curves": "1.4.0",
+        "@noble/hashes": "1.4.0"
     }
 }
