--- a/jest.config.json
+++ b/jest.config.json
@@ -8,5 +8,6 @@
     },
     "transform": {
         "^.+\\.(ts|tsx)$": ["ts-jest", { "tsconfig": "./tsconfig.json" }]
-    }
+    },
+    "setupFiles": ["./setup.jest.ts"]
 }
