--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "devDependencies": {
         "@commitlint/cli": "^19.3.0",
         "@commitlint/config-conventional": "^19.2.2",
+        "@peculiar/webcrypto": "^1.4.6",
         "@types/jest": "^29.5.12",
         "@typescript-eslint/eslint-plugin": "^7.7.1",
         "@typescript-eslint/parser": "^7.7.1",
